FIX Button are now taking 100% width on mobile

--- a/style.css
+++ b/style.css
@@ -126,6 +126,7 @@ button:hover {
   font-size: clamp(1.5rem, 15vw, 8rem);
   padding: clamp(1rem, 2vw, 4rem);
   letter-spacing: clamp(-0.125rem, -1vw, -0.375rem);
+  width: 100%;
   }
 }
 
